--- a/final-product/carpark-style.css
+++ b/final-product/carpark-style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Mandali');
 
 body {
-  /* background-image: url("background-image.png"); */
+  background-image: url("background-image.png");
   background-size: cover;
   background-position: center;
 
